implementação do método PATCH /usuarios/{id}